Change the k8s service type

--- a/k8s-debugger.yaml
+++ b/k8s-debugger.yaml
@@ -42,9 +42,10 @@ metadata:
     app: k8s-debugger
   name: k8s-debugger-service
 spec:
-  ports:
-    - port: 8080
-      protocol: TCP
-      targetPort: 8080
+ type: NodePort
   selector:
     app: k8s-debugger
+  ports:
+    - nodePort: 30163
+      port: 8080 
+      targetPort: 8080
