--- a/k8s-debugger.yaml
+++ b/k8s-debugger.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: k8s-debugger
-        image: mouhamedali/k8s-debugger
+        image: mouhamedali/k8s-debugger:1.0.0  # {"$imagepolicy": "fluxv2-tutorial-deployment:k8s-debugger-policy"}
         ports:
         - containerPort: 8080
         env:
